2008-06-20  Jason Rumney  <jasonr@gnu.org>

        * international/fontset.el (setup-default-fontset): Specify script
        for latin use of iso10646-1.  Fix use of lang tags.

2008-06-19  Miles Bader  <miles@gnu.org>

	* face-remap.el (text-scale-increase): Start from zero if
	text-scale-mode isn't enabled.

2008-06-19  Stefan Monnier  <monnier@iro.umontreal.ca>

	* faces.el (face-set-after-frame-default): Re-apply explicit `font'
	frame parameters after setting up the `default' face.

2008-06-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	* faces.el (face-set-after-frame-default): Don't exclude `default'.

2008-06-18  Glenn Morris  <rgm@gnu.org>

	* mouse.el (buffer-face-mode-invoke): Declare.

	* Makefile.in (ELCFILES): Add org/org-id.elc.

	* calendar/holidays.el (calendar-cursor-holidays): Accept optional date.
	* calendar/cal-menu.el (cal-menu-holidays-menu):
	Use calendar-cursor-holidays rather than cal-menu-today-holidays.
	(cal-menu-today-holidays): Remove function.

	* calendar/cal-menu.el (cal-menu-holiday-window-suffix): Simplify.
	(cal-menu-list-holidays-year, cal-menu-list-holidays-following-year)
	(cal-menu-list-holidays-previous-year, calendar-mouse-goto-date):
	Remove unused functions.
	(calendar-mouse-view-diary-entries): Use format rather than concat.

	* calendar/cal-menu.el (cal-menu-x-popup-menu): Turn it into a macro.
	(calendar-mouse-holidays, calendar-mouse-view-diary-entries)
	(calendar-mouse-print-dates): Adapt for cal-menu-x-popup-menu change.

	* calendar/cal-menu.el (cal-menu-event-to-date): Remove function.
	(calendar-mouse-holidays, calendar-mouse-view-diary-entries)
	(calendar-mouse-view-other-diary-entries, calendar-mouse-print-dates)
	(cal-menu-set-date-title): Use calendar-cursor-to-date rather than
	cal-menu-event-to-date.

	* calendar/cal-html.el (cal-html-cursor-month, cal-html-cursor-year):
	Handle mouse events.
	* calendar/cal-tex.el (cal-tex-cursor-year)
	(cal-tex-cursor-year-landscape, cal-tex-cursor-filofax-year)