@@ -1,3 +1,12 @@
+2008-06-20  Miles Bader  <miles@gnu.org>
+
+	* face-remap.el (face-remap-add-relative, face-remap-set-base):
+	Strip unnecessary list levels from SPECS.
+	(buffer-face-set, buffer-face-toggle):
+	Change argument from FACE to &rest SPECS, and strip unnecessary
+	list levels from SPECS.
+	(buffer-face-mode-invoke): Change argument from FACE to SPECS.
+
 2008-06-20  Jason Rumney  <jasonr@gnu.org>
 
         * international/fontset.el (setup-default-fontset): Specify script
